--- a/src/components/HeaderGame/styles.scss
+++ b/src/components/HeaderGame/styles.scss
@@ -5,7 +5,8 @@
 
 .text-headergame { 
     color: black; 
-    font: 14px/20px "Lato", Arial, sans-serif;
-    font-size: 70px;
-    font-weight: 900; 
+    font: 20px "Lato", Arial, sans-serif;
+    font-size: 50px;
+    font-weight: 900;
+    word-wrap: break-word; 
 }
